--- a/eucities_temps.ipynb
+++ b/eucities_temps.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -679,29 +679,12 @@
    ],
    "source": [
     "pd.options.mode.chained_assignment = None\n",
-    "eu_coast = eucities[(eucities['EU'] == 'yes') & (eucities['coastline'] == 'yes')]\n",
-    "eu_coast.loc[:, 'color'] = [0 for _ in range(len(eu_coast))]\n",
-    "eu_coast.loc[eu_coast['temperature'] > 10, 'color'] = 'red'\n",
-    "eu_coast.loc[(eu_coast['temperature'] >= 6) & (eu_coast['temperature'] <= 10), 'color'] = 'orange'\n",
-    "eu_coast.loc[eu_coast['temperature'] < 6, 'color'] = 'blue'\n",
-    "\n",
-    "eu_notcoast = eucities[(eucities['EU'] == 'yes') & (eucities['coastline'] == 'no')]\n",
-    "eu_notcoast.loc[:, 'color'] = [0 for _ in range(len(eu_notcoast))]\n",
-    "eu_notcoast.loc[eu_notcoast['temperature'] > 10, 'color'] = 'red'\n",
-    "eu_notcoast.loc[(eu_notcoast['temperature'] >= 6) & (eu_notcoast['temperature'] <= 10), 'color'] = 'orange'\n",
-    "eu_notcoast.loc[eu_notcoast['temperature'] < 6, 'color'] = 'blue'\n",
-    "\n",
-    "noteu_coast = eucities[(eucities['EU'] == 'no') & (eucities['coastline'] == 'yes')]\n",
-    "noteu_coast.loc[:, 'color'] = [0 for _ in range(len(noteu_coast))]\n",
-    "noteu_coast.loc[noteu_coast['temperature'] > 10, 'color'] = 'red'\n",
-    "noteu_coast.loc[(noteu_coast['temperature'] >= 6) & (noteu_coast['temperature'] <= 10), 'color'] = 'orange'\n",
-    "noteu_coast.loc[noteu_coast['temperature'] < 6, 'color'] = 'blue'\n",
-    "\n",
-    "noteu_notcoast = eucities[(eucities['EU'] == 'no') & (eucities['coastline'] == 'no')]\n",
-    "noteu_notcoast.loc[:, 'color'] = [0 for _ in range(len(noteu_notcoast))]\n",
-    "noteu_notcoast.loc[noteu_notcoast['temperature'] > 10, 'color'] = 'red'\n",
-    "noteu_notcoast.loc[(noteu_notcoast['temperature'] >= 6) & (noteu_notcoast['temperature'] <= 10), 'color'] = 'orange'\n",
-    "noteu_notcoast.loc[noteu_notcoast['temperature'] < 6, 'color'] = 'blue'\n",
+    "regions = [eu_coast, eu_notcoast, noteu_coast, noteu_notcoast]\n",
+    "for r in regions:\n",
+    "    r.loc[:, 'color'] = [0 for _ in range(len(r))]\n",
+    "    r.loc[r['temperature'] > 10, 'color'] = 'red'\n",
+    "    r.loc[(r['temperature'] >= 6) & (r['temperature'] <= 10), 'color'] = 'orange'\n",
+    "    r.loc[r['temperature'] < 6, 'color'] = 'blue'\n",
     "\n",
     "fig, axes = plt.subplots(2, 2)\n",
     "axes[0][0].scatter(eu_coast['city'], eu_coast['latitude'], color=eu_coast['color'])\n",
