--- a/eucities_temps.ipynb
+++ b/eucities_temps.ipynb
@@ -258,8 +258,7 @@
     "eucountries = eucities.groupby('country')\n",
     "avgs = (eucities.groupby('country').sum() / eucities.groupby('country').count()).round(2)\n",
     "avgs = avgs[['latitude', 'longitude']]\n",
-    "eucities = eucities.set_index('country').fillna(avgs).reset_index()\n",
-    "print(eucities)\n"
+    "eucities = eucities.set_index('country').fillna(avgs).reset_index()"
    ]
   },
   {
@@ -541,8 +540,7 @@
     "eucities.loc[(eucities['EU'] == 'yes') & (eucities['coastline'] == 'no') & (\n",
     "    pd.isna(eucities['temperature'])), 'temperature'] = eu_notcoast_avg\n",
     "eucities.loc[(eucities['EU'] == 'no') & (eucities['coastline'] == 'no') & (\n",
-    "    pd.isna(eucities['temperature'])), 'temperature'] = noteu_notcoast_avg\n",
-    "print(eucities)\n"
+    "    pd.isna(eucities['temperature'])), 'temperature'] = noteu_notcoast_avg"
    ]
   },
   {
