fixed small error y7 order of values

--- a/german_credit.ipynb
+++ b/german_credit.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "[1000 rows x 18 columns]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2142,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2151,7 @@
        "3601.6954022988507"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
        "Name: duration, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2335,8 +2335,8 @@
     "y7 = [\n",
     "    check.loc['No Checking','male mar/wid']['purpose'],\n",
     "    check.loc['Low','male mar/wid']['purpose'],\n",
-    "    check.loc['High','male mar/wid']['purpose'],\n",
-    "    check.loc['Medium','male mar/wid']['purpose']\n",
+    "    check.loc['Medium','male mar/wid']['purpose'],\n",
+    "    check.loc['High','male mar/wid']['purpose']\n",
     "]\n",
     "\n",
     "y8 = [\n",
@@ -2374,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
